# icsmerger

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci-pipeline.yml  ci-qa-pipeline.yml  codeql-analysis.yml  demo.yml  docker-image.yml  main.yml  release-pipeline.yml
icsmerger/: merge.py
icsmerger/tests/: create_calendar_test.py  get_events_test.py  get_ics_test.py  main_test.py  save_calendar_test.py
src/icsmerger/: __main__.py
tests/: merge_test.py
