[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/icsmerger/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src/icsmerger --cov-report xml:cov.xml --cov-report term"
testpaths = [
    "tests"
]

[tool.coverage.report]
omit = [
    "src/icsmerger/__init__.py",
    "src/icsmerger/__main__.py",
    "src/icsmerger/_version.py"
]