[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "icsmerger/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=icsmerger --cov-report xml:cov.xml --cov-report term"
testpaths = [
    "icsmerger/tests"
]

[tool.coverage.report]
omit = [
    "icsmerger/__init__.py",
    "icsmerger/__main__.py",
    "icsmerger/_version.py",
    "icsmerger/tests/*.py"
]