[metadata]
author = KingOfKalk
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Internet
    Topic :: Office/Business :: Scheduling
description = A script to download and merge multiple online ICS resources into one ICS.
keywords = ics
long_description = file: README.md
long_description_content_type = text/markdown
name = icsmerger-KingOfKalk
url = https://github.com/KingOfKalk/icsmerger
project_urls =
    Bug Tracker = https://github.com/KingOfKalk/icsmerger/issues

[options]
install_requires =
    click == 8.1.3
    ics == 0.7.2
    requests == 2.28.2
package_dir =
    = .
packages = find:
python_requires = >=3.9
tests_require=
    pytest == 7.2.1

[options.entry_points]
console_scripts =
    icsmerger = icsmerger.merge:main

[options.packages.find]
where = .

[tool.pytest]
minversion = 7.2
addopts = -ra -q --cov=icsmerger --cov-report xml:cov.xml --cov-report term
testpaths =
    tests

[coverage.report]
omit =
    icsmerger/__init__.py
    icsmerger/__main__.py
    icsmerger/_version.py
    icsmerger/tests/*.py